completed formtaikhoan html,css

--- a/html/index.html
+++ b/html/index.html
@@ -9,32 +9,99 @@
 <body>
     <div class="boxcenter">
         <div class="row mb header">
-            <h1>SIÊU THỊ TRỰC TUYẾN</h1>
+            <h1>THUCFOOD SHOPPING ONLINE</h1>
         </div>
         <div class="row mb menu">
             <ul>
-                <li><a href="#"></a>Trang chủ</li>
-                <li><a href="#"></a>Trang chủ</li>
-                <li><a href="#"></a>Trang chủ</li>
-                <li><a href="#"></a>Trang chủ</li>
-                <li><a href="#"></a>Trang chủ</li>
+                <li><a href="#">Trang chủ</a></li>
+                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="#">Liên hệ</a></li>
+                <li><a href="#">Góp ý</a></li>
+                <li><a href="#">Hỏi đáp</a></li>
             </ul>
         </div>
         <div class="row mb">
-            <div class="boxtrai mr demo">
+            <div class="boxtrai mr">
                 <div class="row">
                     <div class="banner">
                         <img src="/Image/banner.png" alt="">   
                     </div>
                 </div>
                 <div class="row">
-
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr1.png" alt=""></div> 
+                        <p>35.000 VNĐ</p>
+                        <a href="#">GÀ RÁN</a>
+                    </div>
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr2.png" alt=""></div> 
+                        <p>90.000 VNĐ</p>
+                        <a href="#"> PIZZA </a>
+                    </div>
+                    <div class="boxsanpham">
+                        <div class="row img"><img src="/Image/pr3.png" alt=""></div> 
+                        <p>56.000 VNĐ</p>
+                        <a href="#">HAMBURGER</a>
+                    </div>
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr4.png" alt=""></div> 
+                        <p>15.000 VNĐ</p>
+                        <a href="#">KHOAI TÂY CHIÊN</a>
+                    </div>
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr5.jpg" alt=""></div> 
+                        <p>10.000 VNĐ</p>
+                        <a href="#">COCACOLA</a>
+                    </div>
+                    <div class="boxsanpham">
+                        <div class="row img"><img src="/Image/pr6.jpg" alt=""></div> 
+                        <p>45.000 VNĐ</p>
+                        <a href="#">MÌ Ý</a>
+                    </div>
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr7.png" alt=""></div> 
+                        <p>40.000 VNĐ</p>
+                        <a href="#">HÁ CẢO</a>
+                    </div>
+                    <div class="boxsanpham mr">
+                        <div class="row img"><img src="/Image/pr8.jpg" alt=""></div> 
+                        <p>35.000 VNĐ</p>
+                        <a href="#">GÀ SỐT CAY</a>
+                    </div>
+                    <div class="boxsanpham">
+                        <div class="row img"><img src="/Image/pr9.png" alt=""></div> 
+                        <p>15.000 VNĐ</p>
+                        <a href="#">KEM</a>
+                    </div>
                 </div>
             </div>
             <div class="boxphai">
                 <div class="row mb">
                     <div class="boxtieude">TÀI KHOẢN</div>
-                    <div class="boxnoidung"></div>
+                    <div class="boxnoidung formtaikhoan">
+                        <form action="#" method="post">
+                            <div class="row mb10">
+                                Tên đăng nhập<br>
+                                <input type="text" name="user" id="">
+                            </div>
+                            <div class="row mb10">
+                                 Mật khẩu<br>
+                                <input type="password" name="password" id="">
+                            </div>
+                            <div class="row mb10">
+                                <input type="checkbox" name="" id="">Ghi nhớ tài khoản?
+                            </div>
+                            <div class="row mb10">
+                                <input type="submit" value="Đăng nhập">
+                            </div>
+                        </form>
+                        <li>
+                            <a href="#">Quên mật khẩu</a>
+                        </li>
+                        <li>
+                            <a href="#">Đăng ký thành viên</a>
+                        </li>
+                    </div>
                 </div>
                 <div class="row mb">
                     <div class="boxtieude">DANH MỤC</div>
