completed index and admin pages

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="boxcenter">
         <div class="row mb header">
-            <h1>THUCFOOD SHOPPING ONLINE</h1>
+            <h1>THUCFOOD ONLINE SUPERMARKET</h1>
         </div>
         <div class="row mb menu">
             <ul>
@@ -105,12 +105,75 @@
                 </div>
                 <div class="row mb">
                     <div class="boxtieude">DANH MỤC</div>
-                    <div class="boxnoidung2"></div>
-                    <div class="boxfooter"></div>
+                    <div class="boxnoidung2 menu_doc">
+                        <ul>
+                            <li>
+                                <a href="#">Gà rán</a>
+                            </li>
+                            <li>
+                                <a href="#">Pizza</a>
+                            </li>
+                            <li>
+                                <a href="#">Hamburger</a>
+                            </li>
+                            <li>
+                                <a href="#">Nước ngọt</a>
+                            </li>
+                            <li>
+                                <a href="#">Kem</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="boxfooter searchbox">
+                        <form action="#" method="post">
+                            <input type="text" name="#" id="searchbox" placeholder="Từ khóa tìm kiếm">
+                        </form>
+                    </div>
                 </div>
-                <div class="row demo">
+                <div class="row mb">
                     <div class="boxtieude">TOP 10 YÊU THÍCH</div>
-                    <div class="boxnoidung"></div>
+                    <div class="boxnoidung row">
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav1.png" alt=""> 
+                            <a href="">Gà rán giòn cay</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav2.png" alt=""> 
+                            <a href="">Gà sốt phô mai</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav3.png" alt=""> 
+                            <a href="">Burger bò phô mai</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav4.png" alt=""> 
+                            <a href="">Burger gà giòn</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav5.png" alt=""> 
+                            <a href="">Pizza phô mai</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav6.png" alt=""> 
+                            <a href="">Pizza hải sản</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav7.png" alt=""> 
+                            <a href="">Mì Ý sốt bò bằm</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav8.png" alt=""> 
+                            <a href="">Mì Ý sốt kem (Carbonara)</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav9.png" alt=""> 
+                            <a href="">Khoai tây chiên</a>
+                        </div>
+                        <div class="row mb10 top10">
+                            <img src="/Image/fav10.png" alt=""> 
+                            <a href="">Gà nướng mật ong</a>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
