--- a/html/admin.html
+++ b/html/admin.html
@@ -9,12 +9,12 @@
 <body>
     <div class="boxcenter">
         <div class="row mb  header_admin">
-            <h1>THUCFOOD SHOPPING ONLINE</h1>
+            <h1>ADMIN DASHBOARD WEBSITE</h1> 
         </div>
         <div class="row mb menu">
             <ul>
-                <li><a href="#">Trang chủ</a></li>
-                <li><a href="#">Danh mục</a></li>
+                <li><a href="admin.html">Trang chủ</a></li>
+                <li><a href="admin.html">Danh mục</a></li>
                 <li><a href="#">Hàng hóa</a></li>
                 <li><a href="#">Khách hàng</a></li>
                 <li><a href="#">Bình luận</a></li>
@@ -38,7 +38,7 @@
                     <div class="row mb10">
                         <input type="submit" value="Thêm mới">
                         <input type="reset" value="Nhập lại">
-                        <input type="button" value="Danh sách">
+                        <a href="product_categories.html"><input type="button" value="Danh sách"></a>
                     </div>
                 </form>
             </div>
