Thêm form để thêm mới sản phẩm với các trường danh mục, tên sản phẩm, giá, hình ảnh và mô tả

--- a/html/index.html
+++ b/html/index.html
@@ -179,8 +179,9 @@
             </div>
         </div>
         <div class="row mb footer">
-            © 2025 E-commerce by Trí Thức
+            © 2025 E-commerce | Trí Thức
         </div>
     </div>
 </body>
 </html>
+
