--- a/html/admin.html
+++ b/html/admin.html
@@ -26,14 +26,14 @@
                 <h1>THÊM MỚI LOẠI HÀNG HÓA </h1>
             </div>    
             <div class="row form_noidung">
-                <form action="#" method="post">
+                <form action="/admin/index.php?act=adddm" method="post">
                     <div class="row mb10">
                         Mã loại<br>
                         <input type="text" name="maloai">
                     </div>
                     <div class="row mb10">
                         Tên loại<br>
-                        <input type="text" name="tenloai">
+                        <input type="text" name="tenloai"  autocomplete="off">
                     </div>
                     <div class="row mb10">
                         <input type="submit" value="Thêm mới">
