fixing case: updatesp

--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
                         <form action="#" method="post">
                             <div class="row mb10">
                                 Tên đăng nhập<br>
-                                <input type="text" name="user" id="">
+                                <input type="text" name="user" id="" autocomplete="off">
                             </div>
                             <div class="row mb10">
                                  Mật khẩu<br>
