--- a/html/product_categories.html
+++ b/html/product_categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Categories</title>
-    <link rel="stylesheet" href="/css/product_categories.css">
+    <link rel="stylesheet" href="/view/css/product_categories.css">
 </head>
 <body>
     <div class="boxcenter">
